BugFix: margins from overlay row removed to fix alignment issue

--- a/chrome-extension/src/grid-overlay.css
+++ b/chrome-extension/src/grid-overlay.css
@@ -17,13 +17,11 @@
 
 .grid-overlay-row {
   position: absolute;
-  display: flex;
-  flex-wrap: nowrap;
   outline: 1px dotted var(--pink);
   /* Counters the fact grid-overlay isn't enclosed in container */
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  margin-top: 0 !important;
 }
 
 .grid-overlay-col {
